--- a/public/css/style.css
+++ b/public/css/style.css
@@ -24,7 +24,21 @@ body {
   font-size: 3rem;
 }
 
+.landing__welcome {
+  font-size: 1.7rem;
+  line-height: 1.3;
+}
+
+.u-margin-bottom-small {
+  margin-bottom: 2rem;
+}
+
+.btn {
+  padding: 1rem 3rem;
+}
+
 .header {
+  position: relative;
   padding: 2rem;
   border-bottom: 1px solid #000;
   display: flex;
@@ -32,6 +46,11 @@ body {
 }
 .header__icon {
   transform: scale(2);
+}
+
+.landing {
+  max-width: 800px;
+  margin: 15rem auto;
 }
 
 /*# sourceMappingURL=style.css.map */
