--- a/public/sass/main.scss
+++ b/public/sass/main.scss
@@ -1,5 +1,8 @@
 @import "base/base";
 @import "base/typography";
+@import "base/utilities";
+
+@import "components/button";
 
 @import "layout/header";
 
