--- a/public/sass/base/_utilities.scss
+++ b/public/sass/base/_utilities.scss
@@ -1,1 +1,8 @@
 .u-margin-bottom-small { margin-bottom: 2rem; }
+.u-margin-bottom-medium { margin-bottom: 4rem; }
+.u-margin-bottom-large { margin-bottom: 6rem; }
+
+.u-text-decoration-none { text-decoration: none; }
+.u-text-transform-capitalize { text-transform: capitalize; }
+
+.u-center-align { text-align: center; }
