--- a/public/sass/main.scss
+++ b/public/sass/main.scss
@@ -5,5 +5,8 @@
 @import "components/button";
 
 @import "layout/header";
+@import "layout/loading";
 
+@import "pages/home";
 @import "pages/landing";
+@import "pages/weather";
