--- a/public/sass/base/_base.scss
+++ b/public/sass/base/_base.scss
@@ -1,3 +1,13 @@
+:root {
+  --color-black: #000;
+
+  --color-light-grey-1: #ddd;
+  --color-light-grey-2: #f5f4f4;
+  
+  --color-dark-grey-1: #d3d3d3;
+ 
+}
+
 *,
 *::before,
 *::after {
