--- a/public/sass/layout/_header.scss
+++ b/public/sass/layout/_header.scss
@@ -1,12 +1,40 @@
 .header {
   position: relative;
   padding: 2rem;
-  border-bottom: 1px solid #000;
+  border-bottom: 1px solid var(--color-black);
 
   display: flex;
+  justify-content: space-between;
   align-items: center;
+
+  &__logo {
+    display: flex;
+    align-items: center;
+  }
 
   &__icon {
     transform: scale(2);
+  }
+
+  &__btn--logout {
+    height: 100%;
+    flex-grow: 0;
+  }
+
+  &__nav {
+    display: flex;
+    align-items: center;
+    gap: 3rem;
+    
+    &--list {
+      display: flex;
+      gap: 2rem;
+      list-style: none;
+    }
+
+    &--item {
+      display: inline-block;
+      
+    }
   }
 }
