--- a/public/sass/base/_base.scss
+++ b/public/sass/base/_base.scss
@@ -18,6 +18,16 @@
 
 html {
   font-size: 62.5%; // 10px
+
+  @include respond(big-desktop) {
+    font-size: 75%;
+  }
+  @include respond(tab-land) {
+    font-size: 56.25%;
+  }
+  @include respond(tab-port) {
+    font-size: 50%;
+  }
 }
 
 body {
