--- a/public/sass/layout/_header.scss
+++ b/public/sass/layout/_header.scss
@@ -30,11 +30,14 @@
       display: flex;
       gap: 2rem;
       list-style: none;
+
+      @include respond(phone) {
+        display: none;
+      }
     }
 
     &--item {
       display: inline-block;
-      
     }
   }
 }
