--- a/public/sass/pages/_weather.scss
+++ b/public/sass/pages/_weather.scss
@@ -3,6 +3,20 @@
   padding: 10rem 0;
   max-width: 800px;
   position: relative;
+
+  @include respond(phone) {
+    padding: 2rem 0;
+    display: none;
+  }
+
+  &-mobile {
+    display: none; 
+
+    @include respond(phone) {
+      max-width: 300px;
+      display: block;
+    }
+  }
   
   &__table {
     border: 1px solid var(--color-black);
@@ -11,7 +25,11 @@
     &--header-sub,
     &--header-value {
       display: grid;
-      grid-template-columns: repeat(6, 1fr);
+      grid-template-columns: repeat(6, minmax(100px, 1fr));
+
+      @include respond(phone) {
+        grid-template-columns: repeat(2, minmax(100px, 1fr));
+      }
     }
 
     &--header-main {
@@ -35,6 +53,10 @@
       position: absolute;
       right: 0;
       bottom: 0;
+
+      @include respond(phone) {
+        bottom: -30px;
+      }
     }
   }
 
